# TA_jojo

./: README.md  adacam.py  cara liat video di rviz2
dariterminal_ws/src/mycobot_interface/: package.xml  setup.cfg  setup.py
dariterminal_ws/src/mycobot_interface/mycobot_interface/: mycobot_control_node.py
diary_jojo/: JUMAT_9Mei_iamnotokay.md  KAMIS_28aug_webcamthinggy.md  Senin_11aug_strukturnjelasinnode  jumat_2mei_BISAKONTROLDARILAPPY.md  kamis_7aug_blurtingoutmypentupfrustration.md  rabu_30Apr2025_re-first_entry.md  selasa_29jul_sebenernyaakubininaapansih.md  selasa_2sep_refactor  senin_18aug_mytummyhurtssobadrn.md  senin_28jul_bisamanualexecutables.md
mvp3_webcamkegui_ws/src/image_gui_subscriber/: package.xml  setup.py
mvp3_webcamkegui_ws/src/image_gui_subscriber/image_gui_subscriber/: gui_subscriber_node.py
mvp3_webcamkegui_ws/src/image_publisher/: package.xml  setup.py
mvp3_webcamkegui_ws/src/image_publisher/image_publisher/: image_publisher_node.py
mvp3_webcamkegui_ws/src/my_interfaces/: CMakeLists.txt  package.xml
mvp3_webcamkegui_ws/src/my_interfaces/srv/: SelectSource.srv
pythonscript9mei/: nyobadapetinposisilagi9mei.py
src/c_pubsub_jo/: CMakeLists.txt  package.xml
src/c_pubsub_jo/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/c_sercli/: CMakeLists.txt  package.xml
src/c_sercli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/image_gui_subscriber/: setup.py
src/image_gui_subscriber/image_gui_subscriber/: gui_subscriber_node.py
src/interface_jojo/: CMakeLists.txt  package.xml
src/interface_lagi/: CMakeLists.txt  package.xml
src/interface_lagi/src/: publish_address_book.cpp
src/liat_webcam/: setup.py
src/liat_webcam/liat_webcam/: central_point_estimator.py
src/my_interfaces/: package.xml
src/my_interfaces/msg/: ImageInfo.msg
src/p_pubsub/: package.xml  setup.cfg  setup.py
src/p_pubsub/p_pubsub/: publisher_member_function.py  subscriber_member_function.py
src/p_sercli/: package.xml  setup.cfg  setup.py
src/p_sercli/p_sercli/: service_member_function.py
src/py_sercli/: package.xml  setup.cfg  setup.py
src/py_sercli/py_sercli/: client_member_function.py  service_member_function.py
src/py_sercli/py_sercli/install/: local_setup.sh  setup.sh
webcam_ws/src/image_gui_subscriber/: setup.cfg
webcam_ws/src/image_publisher/: package.xml  setup.py
webcam_ws/src/liat_webcam/: package.xml  setup.cfg
webcam_ws/src/liat_webcam/liat_webcam/: webcam_gui.py  webcam_publisher.py  webcam_publisher.py.save
webcam_ws/src/my_interfaces/: CMakeLists.txt
ws_jojo177jul/src/simple_mycobot_driver/: package.xml  setup.cfg  setup.py
ws_jojo177jul/src/simple_mycobot_driver/launch/: mycobot_gui.launch.py
ws_jojo177jul/src/simple_mycobot_driver/simple_mycobot_driver/: gui_window.py  main.py  robot_interface.py  utils.py
